[XForms] Submission is leaving off document level pi and comments. Bug 344621, patch by sspeiche, r=doronr+olli